<resources>

    <string name="app_name">GB Version Plus</string>

    <string name="walk">Walk &amp; Chat</string>
    <string name="message_number_empty">Please enter number</string>
    <string name="message_number_error">Number not registered correctly</string>
    <string name="accessibility">We need access to this service to perform certain features in WhatsPunch App, please go ahead and enable the switch above to enjoy all the features properly.</string>
    <string name="chatText">Chat Text</string>
    <string name="emoji">Emoji</string>
    <string name="repeatText">Repeat Text</string>
    <string name="noOfRepeatText">Number of Repeat Text</string>
    <string name="repeat">Repeat</string>
    <string name="newLineOn">New Line On</string>
    <string name="cleanSuccess">Clean Successfully</string>
    <string name="walkNChatInstruction">This feature will set the background layer of the camera in realtime with lesser opacity. Using this app you can see what is going on behind you while chatting with friends.</string>
    <string name="shakeToOpenWhatsapp">Shake to Open WhatsApp</string>
    <string name="shakeToOpenWhatsappEnable">Enable this feature to access WhatsApp by shaking your Phone anywhere, anytime!</string>
    <string name="shakeInfo">This is just a simple feature allows you to access WhatsApp with a quick shortcut. Just shake your Phone to perform this shortcut. Please note it takes 3–4 second to work if you are using at the Home Screen!</string>
    <string name="directChatInfo">This Application uses WhatsApp services to start a conversation with any number included.</string>
    <string name="directChatInfoNote"> it Does not store the number</string>
    <string name="enterNumber">Enter Number</string>
    <string name="app_installed">Installed Version</string>
    <string name="app_latest">Latest Version</string>
    <string name="app_latest_version_url">https://whatsapp-messenger.en.uptodown.com/android</string>
    <string name="app_not_installed">Not installed</string>
    <string name="app_package_name">com.whatsapp</string>
    <string name="app_playstore_url">https://play.google.com/store/apps/details?id=com.whatsapp</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="saved_files">Saved Files</string>
    <string name="no_files_found">No Files Found</string>
    <string name="cant_find_whatsapp_dir">Cant find WhatsApp Dir</string>

<<<<<<< HEAD
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
=======
    <string name="exit_app_message">Want to exit?</string>
    <string name="confirm_dismiss_message">No</string>
>>>>>>> parent of 869856a (set ads)

    <string name="download">Download</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="image_save">Image Saved Successfully!</string>
    <string name="image_saved">Image Saved!</string>
    <string name="item_view_role_description">Tab</string>
    <string name="no_file_found">No Files found!</string>
    <string name="repost">Repost</string>
    <string name="search_menu_title">Search</string>
    <string name="share">Share</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="tabimage">Images</string>
    <string name="tabvideo">Videos</string>
    <string name="unable_to_create">Unable to create directory!</string>
    <string name="unable_to_save_image">Unable to save image!</string>
    <string name="video_save">Video file saved successfully.</string>
    <string name="video_save_fail">Video saving failed. Source file missing.</string>
    <string name="video_saved">Video Saved!</string>
    <string name="error_while_show_image">Error while showing image!</string>
    <string name="wrong_path">Wrong Path Selected!</string>
    <string name="please_allow_function">Please allow permission to avail functionalities!</string>

</resources>