<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_10sdp"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/back"
            android:tint="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Shortcut"
                android:textColor="@color/colorAccent"
                  android:textSize="@dimen/_17sdp"
               android:fontFamily="@font/robotobold" />
        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/_10sdp" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize">

                <RelativeLayout
                    android:id="@+id/l"
                    android:layout_width="?actionBarSize"
                    android:layout_height="?actionBarSize"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    android:visibility="gone">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_7sdp"
                        android:layout_marginTop="@dimen/_7sdp"
                        android:layout_marginEnd="@dimen/_7sdp"
                        android:layout_marginBottom="@dimen/_7sdp"
                        android:background="@mipmap/ic_launcher" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@+id/l">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toStartOf="@+id/r">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/robotobold"
                                android:gravity="center_vertical"
                                android:text="@string/shakeToOpenWhatsapp"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_12sdp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/robotomedium"
                                android:gravity="center_vertical"
                                android:text="@string/shakeToOpenWhatsappEnable"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_9sdp" />
                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/r"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/btnShake"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_centerInParent="true"
                            android:layout_height="@dimen/_30sdp"
                            android:src="@drawable/switch_on" />
                    </RelativeLayout>
                </RelativeLayout>
            </RelativeLayout>

            <ImageView
                android:id="@+id/shake"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@drawable/img_shake_mobile" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/robotomedium"
                android:gravity="center_horizontal"
                android:justificationMode="inter_word"
                android:text="@string/shakeInfo"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>