<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_10sdp"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/back"
            android:tint="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Text To Emoji"
                android:textColor="@color/colorAccent"
                  android:textSize="@dimen/_17sdp"
               android:fontFamily="@font/robotobold" />
        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/_10sdp" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/etbg"
                android:elevation="@dimen/_1sdp">

                <EditText
                    android:id="@+id/inputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:background="#00000000"
                    android:fontFamily="@font/robotomedium"
                    android:hint="@string/chatText"
                    android:paddingHorizontal="@dimen/_15sdp"
                    android:paddingVertical="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:orientation="horizontal"
                android:weightSum="2.0"
                app:layout_constraintTop_toBottomOf="@+id/rl_input">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:background="@drawable/etbg"
                    android:elevation="@dimen/_1sdp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/emojeeTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="0dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/robotomedium"
                        android:hint="@string/emoji"
                        android:paddingVertical="@dimen/_10sdp"
                        android:paddingStart="@dimen/_15sdp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1.3"
                    android:gravity="end"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/convertEmojeeBtn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:fontFamily="@font/robotomedium"
                        android:includeFontPadding="false"
                        android:src="@drawable/repet"
                        android:text="@string/repeat"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_125sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/etbg"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/convertedEmojeeTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/robotomedium"
                    android:hint="Preview of Text to Emoji"
                    android:inputType="textMultiLine"
                    android:isScrollContainer="true"
                    android:lineSpacingExtra="4dp"
                    android:overScrollMode="always"
                    android:padding="@dimen/_10sdp"
                    android:paddingTop="8dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="8dp"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageView
                    android:id="@+id/copyTxtBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:layout_margin="@dimen/_5sdp"
                    android:src="@drawable/btn_copy" />

                <ImageView
                    android:id="@+id/clearTxtBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:layout_margin="@dimen/_5sdp"
                    android:src="@drawable/btn_clear" />

                <ImageView
                    android:id="@+id/shareTxtBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/_5sdp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/btn_share" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>